--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-md navbar-light" style="background-color: #e3f2fd;">
         <a href="#" class="navbar-brand">Энциклопедия Devman</a>
+        <div class="mr-auto clearfix">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb d-inline-flex bg-transparent white-text my-0 py-0">
+                    <li class="breadcrumb-item active"><a href="/index.html">Главная</a></li>
+                </ol>
+            </nav>
+        </div>
     </nav>
     
     <div class="container-fluid my-3">
