Fix special symbols escaping

--- a/templates/article.html
+++ b/templates/article.html
@@ -14,8 +14,8 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb d-inline-flex bg-transparent white-text my-0 py-0">
                     <li class="breadcrumb-item"><a href="/index.html">Главная</a></li>
-                    <li class="breadcrumb-item"><a href="#">{{ topic }}</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">{{ name }}</li>
+                    <li class="breadcrumb-item"><a href="#">{{ topic|e }}</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">{{ name|e }}</li>
                 </ol>
             </nav>
         </div>
