--- a/templates/article.html
+++ b/templates/article.html
@@ -1,32 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ name }}</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
-<body>
-    <nav class="navbar navbar-expand-md navbar-light" style="background-color: #e3f2fd;">
-        <a href="#" class="navbar-brand">Энциклопедия Devman</a>
-        <div class="mr-auto clearfix">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb d-inline-flex bg-transparent white-text my-0 py-0">
-                    <li class="breadcrumb-item"><a href="/index.html">Главная</a></li>
-                    <li class="breadcrumb-item"><a href="#">{{ topic|e }}</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">{{ name|e }}</li>
-                </ol>
-            </nav>
-        </div>
-    </nav>
-
-    <div class="container-fluid my-3">
-        {{ content }}
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}{{ name }}{% endblock %}
+{% block breadcrumb %}
+<li class="breadcrumb-item"><a href="/index.html">Главная</a></li>
+<li class="breadcrumb-item"><a href="#">{{ topic|e }}</a></li>
+<li class="breadcrumb-item active" aria-current="page">{{ name|e }}</li>
+{% endblock %}
+{% block content %}{{ content }}{% endblock %}
