--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Энциклопедия Devman{% endblock %}
 {% block breadcrumb %}
-<li class="breadcrumb-item active"><a href="/index.html">Главная</a></li>
+<li class="breadcrumb-item active"><a href="index.html">Главная</a></li>
 {% endblock %}
 {% block content %}
 <ul>
