--- a/templates/article.html
+++ b/templates/article.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ name }}{% endblock %}
 {% block breadcrumb %}
-<li class="breadcrumb-item"><a href="/index.html">Главная</a></li>
+<li class="breadcrumb-item"><a href="index.html">Главная</a></li>
 <li class="breadcrumb-item"><a href="#">{{ topic|e }}</a></li>
 <li class="breadcrumb-item active" aria-current="page">{{ name|e }}</li>
 {% endblock %}
