--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}{% endblock %}</title>
+    <title>
+
+        {% block title %}
+        {% endblock %}
+
+    </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
@@ -13,13 +18,19 @@
         <div class="mr-auto clearfix">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb d-inline-flex bg-transparent white-text my-0 py-0">
-                    {% block breadcrumb %}{% endblock %}
+
+                    {% block breadcrumb %}
+                    {% endblock %}
+
                 </ol>
             </nav>
         </div>
     </nav>
     <div class="container-fluid my-3">
-        {% block content %}{% endblock %}
+
+        {% block content %}
+        {% endblock %}
+
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
